# ai-research-notes

./: .gitignore  CLAUDE.md  README.md  TODO.md
code/diffusion/: README.md  diffusion.ipynb  pyproject.toml  test_train_mnist_ddpm.py  train_mnist_ddpm.py  train_mnist_ddpm_ema.py  visualize_noise.ipynb
code/dit/: README.md  diffusion.py  dit.py  pyproject.toml  train_cifar10_dit.py
code/dit/tests/: test_diffusion.py  test_dit.py  test_train_smoke.py
docs/case-studies/: 5_lpm-case-study.md  6_dit-case-study.md  dit-primary-source-notes.md  module1-ddpm-math-derivation.md  module1-ddpm-on-mnist-paper.md  module3-dit-math-derivation.md  notes-module1-ddpm-reading.md
scripts/: package-lock.json  package.json  render_ddpm_derivation_pdf.sh  render_dit_derivation_pdf.sh  render_pdf.js
