[project]
name = "dit-learning-lab"
version = "0.1.0"
description = "A small, testable Diffusion Transformer learning implementation"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "torch>=2.0",
    "torchvision>=0.15",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
